Version 13:
Return of HeatRegulate! This time in a better working custom format.
Updated ZeroHeat Regulate example to reflect this update.

Version 12:
Added a MAX31855 variation (Zero31855).

Version 11:
Added ZeroBuzz, a simple error sound generator on a frequency of choice.

Version 10:
Added a MAX6675 variation (Zero6675). Split the code into different class component files.
Also removed HeatRegulate due to it not being used. 
Redid the HeatRegulate example to work with Zero6675 and without HeatRegulate.

Version 9:
Reduced the lag in ZeroFila's readout code. Changed the ZeroLED working.

Version 8:
Removed the LED pin from ZeroFila, since it can probably be controlled better by ZeroPWM.

Version 7:
Fixed ZeroFila so that it still functions when delayed, and measures a more stable value.

Version 6:
Added the new ZeroFila part, a function to easily control a TSL1401CL as a filament sensor.

Version 5:
Added the DigiShine function for ZeroLED, combining both ZeroLED and ZeroPWM.

Version 4:
Fixed ZeroHeats 0 and 100% values to be 0 and 100%.

Version 3:
Complete overhaul of the functions of ZeroHeat. Regulate function got skimmed down.
Heat and HeatSlow got replaced with Heat, HeatReverse, HeatFast and HeatFastReverse.

Version 2:
Complete overhaul of ZeroAMP.
Added the HeatSlow function in ZeroHeat. Added HeatRegulate.

Version 1:
Added ZeroHeat as a heater specific version of ZeroPWM.

Version 0:
Combined the ZeroLED, ZeroAMP and ZeroPWM Libraries.