@@ -27,13 +27,10 @@ EXA	   			KEYWORD2
 Amps				KEYWORD2
 pwmWrite   			KEYWORD2
 Heat				KEYWORD2
-HeatReverse			KEYWORD2
 HeatFast			KEYWORD2
-HeatFastReverse			KEYWORD2
-HeatReverse			KEYWORD2
+HeatRegulate			KEYWORD2
 FilaRead			KEYWORD2
 FilaRead5			KEYWORD2
 HeatRead			KEYWORD2
 HeatRead2			KEYWORD2
 Pulse				KEYWORD2
-HeatRegulate			KEYWORD2
